SW-7891 Fixed: Service drop-down-menu on tablet view

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/custom.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/custom.less
@@ -1,5 +1,5 @@
 .custom-page--content {
-    .unitize(45, 16, margin-top);
+    .unitize(14, 16, margin-top);
 
     h1 {
 	.unitize(12, 16, margin-top);
@@ -9,6 +9,9 @@
 
 @media screen and (min-width: @tabletViewportWidth) {
 
+    .custom-page--content {
+	.unitize(45, 16, margin-top);
+    }
 }
 
 @media screen and (min-width: @desktopViewportWidth) {
